--- a/tabby-core/src/components/safeModeModal.component.pug
+++ b/tabby-core/src/components/safeModeModal.component.pug
@@ -1,7 +1,7 @@
 .modal-body
-    .alert.alert-danger Tabby could not start with your plugins, so all third party plugins have been disabled in this session. The error was:
+    .alert.alert-danger Tabby 无法启动您的插件，因此在此会话中已禁用所有第三方插件。错误：
 
     pre {{error}}
 
 .modal-footer
-    button.btn.btn-primary((click)='close()') Close
+    button.btn.btn-primary((click)='close()') 关闭
