--- a/tabby-local/src/components/commandLineEditor.component.pug
+++ b/tabby-local/src/components/commandLineEditor.component.pug
@@ -1,6 +1,6 @@
 ng-container(*ngIf='!argvMode')
     .form-group
-        label Command line
+        label 命令行
         .input-group
             .input-group-prepend
                 a.input-group-text(
@@ -16,7 +16,7 @@ ng-container(*ngIf='!argvMode')
 
 ng-container(*ngIf='argvMode')
     .form-group
-        label Program
+        label 程序
         .input-group
             .input-group-prepend
                 a.input-group-text(
@@ -31,7 +31,7 @@ ng-container(*ngIf='argvMode')
             )
 
     .form-group
-        label Arguments
+        label 参数
         .input-group(
             *ngFor='let arg of _model.args; index as i; trackBy: trackByIndex',
         )
@@ -46,4 +46,4 @@ ng-container(*ngIf='argvMode')
         .mt-2
             button.btn.btn-secondary((click)='_model.args.push("")')
                 i.fas.fa-plus.mr-2
-                | Add
+                | 添加
