--- a/tabby-settings/src/components/hotkeyInputModal.component.pug
+++ b/tabby-settings/src/components/hotkeyInputModal.component.pug
@@ -1,5 +1,5 @@
 .modal-header
-    h5 Press the key now
+    h5 等待输入按键
 
 .modal-body
     .input
@@ -9,4 +9,4 @@
         div([style.width]='timeoutProgress + "%"')
 
 .modal-footer
-    button.btn.btn-primary((click)='close()') Cancel
+    button.btn.btn-primary((click)='close()') 取消
