--- a/tabby-terminal/src/components/streamProcessingSettings.component.pug
+++ b/tabby-terminal/src/components/streamProcessingSettings.component.pug
@@ -1,6 +1,6 @@
 .form-line
     .header
-        .title Input mode
+        .title 输入模式
 
     .d-flex(ngbDropdown)
         button.btn.btn-secondary.btn-tab-bar(
@@ -18,7 +18,7 @@
 
 .form-line
     .header
-        .title Input newlines
+        .title 输入换行
 
     select.form-control(
         [(ngModel)]='options.inputNewlines',
@@ -27,7 +27,7 @@
 
 .form-line
     .header
-        .title Output mode
+        .title 输出模式
 
     .d-flex(ngbDropdown)
         button.btn.btn-secondary.btn-tab-bar(
@@ -45,7 +45,7 @@
 
 .form-line
     .header
-        .title Output newlines
+        .title 输出换行
 
     select.form-control(
         [(ngModel)]='options.outputNewlines',
