--- a/tabby-core/src/components/selectorModal.component.pug
+++ b/tabby-core/src/components/selectorModal.component.pug
@@ -29,4 +29,4 @@
                 )
                 .title.mr-2 {{getOptionText(option)}}
                 .description.no-wrap.text-muted {{option.description}}
-                .no-wrap.badge.badge-secondary.text-muted.ml-auto(*ngIf='selectedIndex == i') Enter
+                .no-wrap.badge.badge-secondary.text-muted.ml-auto(*ngIf='selectedIndex == i') 确定
