--- a/tabby-core/src/components/welcomeTab.component.pug
+++ b/tabby-core/src/components/welcomeTab.component.pug
@@ -4,21 +4,21 @@
         h1.tabby-title Tabby
             sup α
 
-    .text-center.mb-5 Thank you for downloading Tabby!
+    .text-center.mb-5 感谢您下载 Tabby ！
 
     .form-line
         .header
-            .title Enable analytics
-            .description Help track the number of Tabby installs across the world!
+            .title 启用分析
+            .description 帮助统计 Tabby 在全世界的安装量!
         toggle([(ngModel)]='config.store.enableAnalytics')
 
 
     .form-line
         .header
-            .title Enable global hotkey (#[strong Ctrl-Space])
-            .description Toggles the Tabby window visibility
+            .title 启用全局热键 (#[strong Ctrl-Space])
+            .description 切换 Tabby 显示或隐藏
         toggle([(ngModel)]='enableGlobalHotkey')
 
 
     .text-center.mt-5
-        button.btn.btn-primary((click)='closeAndDisable()') Close and never show again
+        button.btn.btn-primary((click)='closeAndDisable()') 关闭并且不再显示
