--- a/tabby-settings/src/components/configSyncSettingsTab.component.pug
+++ b/tabby-settings/src/components/configSyncSettingsTab.component.pug
@@ -1,12 +1,12 @@
-h3.mb-3 Config sync
+h3.mb-3 同步配置
 
 ul.nav-tabs(ngbNav, #nav='ngbNav')
     li(ngbNavItem)
-        a(ngbNavLink) Sync
+        a(ngbNavLink) 同步
         ng-template(ngbNavContent)
             .form-line
                 .header
-                    .title Sync host
+                    .title 同步主机
 
                 .input-group.w-50
                     input.form-control(
@@ -21,7 +21,7 @@ ul.nav-tabs(ngbNav, #nav='ngbNav')
             .form-line
                 .header
                     .title Secret sync token
-                    .description Get it from the Tabby Web settings window
+                    .description 从 Tabby Web 设置中获取
 
                 .input-group
                     input.form-control(
@@ -38,16 +38,16 @@ ul.nav-tabs(ngbNav, #nav='ngbNav')
             ng-container(*ngIf='config.store.configSync.token')
                 .alert.alert-danger(*ngIf='connectionSuccessful === false')
                     i.fas.fa-exclamation-triangle
-                    span.ml-2 Connection failed: {{connectionError}}
+                    span.ml-2 连接失败：{{connectionError}}
 
             ng-container(*ngIf='connectionSuccessful')
                 .form-line
                     .header
-                        .title Configs
+                        .title 配置
 
                 div(*ngIf='configs === null')
                     i.fas.fa-fw.fa-circle-notch.fa-spin
-                    span.ml-2 Loading configs...
+                    span.ml-2 加载配置中……
 
                 ng-container(*ngIf='configs !== null')
                     .list-group-light
@@ -59,34 +59,34 @@ ul.nav-tabs(ngbNav, #nav='ngbNav')
                             i.fas.fa-fw.fa-file
                             .ml-2.d-flex.flex-column.align-items-start
                                 div {{cfg.name}}
-                                small.text-muted Modified on {{cfg.modified_at|date:'medium'}}
+                                small.text-muted 修改于 {{cfg.modified_at|date:'medium'}}
                             .mr-auto
                             button.btn.btn-link.ml-1(
                                 (click)='uploadAndSync(cfg)',
                                 [class.hover-reveal]='!isActiveConfig(cfg)'
                             )
                                 i.fas.fa-arrow-up
-                                span.ml-2(*ngIf='isActiveConfig(cfg)') Upload
-                                span.ml-2(*ngIf='!isActiveConfig(cfg)') Replace
+                                span.ml-2(*ngIf='isActiveConfig(cfg)') 上传
+                                span.ml-2(*ngIf='!isActiveConfig(cfg)') 替换
                             button.btn.btn-link.ml-1(
                                 (click)='downloadAndSync(cfg)',
                                 [class.hover-reveal]='!isActiveConfig(cfg)'
                             )
                                 i.fas.fa-arrow-down
-                                span.ml-2 Download
+                                span.ml-2 下载
                         a.list-group-item.list-group-item-action.d-flex.align-items-center(
                             href='#',
                             (click)='uploadAsNew()'
                         )
                             i.fas.fa-fw
                             i.fas.fa-fw.fa-cloud-upload-alt
-                            .ml-2 Upload as a new config
+                            .ml-2 上传为新配置
 
             ng-container(*ngIf='hasMatchingRemoteConfig()')
                 .form-line
                     .header
-                        .title Sync automatically
-                        .description Automatically upload changes and check for updates every minute
+                        .title 自动同步
+                        .description 每分钟自动上传变更并检查更新
 
                     toggle(
                         [(ngModel)]='config.store.configSync.auto',
@@ -94,11 +94,11 @@ ul.nav-tabs(ngbNav, #nav='ngbNav')
                     )
 
     li(ngbNavItem)
-        a(ngbNavLink) Advanced
+        a(ngbNavLink) 高级
         ng-template(ngbNavContent)
             .form-line
                 .header
-                    .title Sync hotkeys
+                    .title 同步热键
                 toggle(
                     [(ngModel)]='config.store.configSync.parts.hotkeys',
                     (ngModelChange)='config.save()',
@@ -106,7 +106,7 @@ ul.nav-tabs(ngbNav, #nav='ngbNav')
 
             .form-line
                 .header
-                    .title Sync window settings
+                    .title 同步窗口设置
                 toggle(
                     [(ngModel)]='config.store.configSync.parts.appearance',
                     (ngModelChange)='config.save()',
@@ -114,7 +114,7 @@ ul.nav-tabs(ngbNav, #nav='ngbNav')
 
             .form-line
                 .header
-                    .title Sync Vault
+                    .title 同步保管库
                 toggle(
                     [(ngModel)]='config.store.configSync.parts.vault',
                     (ngModelChange)='config.save()',
