--- a/tabby-settings/src/components/editProfileModal.component.pug
+++ b/tabby-settings/src/components/editProfileModal.component.pug
@@ -2,13 +2,13 @@
     h3.m-0 {{profile.name}}
 
 .modal-header(*ngIf='defaultsMode')
-    h3.m-0 Defaults for {{profileProvider.name}}
+    h3.m-0 默认为 {{profileProvider.name}}
 
 .modal-body
     .row
         .col-12.col-lg-4
             .form-group(*ngIf='!defaultsMode')
-                label Name
+                label 名字
                 input.form-control(
                     type='text',
                     autofocus,
@@ -16,7 +16,7 @@
                 )
 
             .form-group(*ngIf='!defaultsMode')
-                label Group
+                label 分组
                 input.form-control(
                     type='text',
                     alwaysVisibleTypeahead,
@@ -26,7 +26,7 @@
                 )
 
             .form-group(*ngIf='!defaultsMode')
-                label Icon
+                label 图标
                 .input-group
                     input.form-control(
                         type='text',
@@ -45,7 +45,7 @@
 
             .form-line
                 .header
-                    .title Color
+                    .title 颜色
                 input.form-control.w-50(
                     type='text',
                     [(ngModel)]='profile.color',
@@ -56,8 +56,8 @@
 
             .form-line
                 .header
-                    .title Disable dynamic tab title
-                    .description Connection name will be used instead
+                    .title 禁用动态标签页名
+                    .description 将使用连接名
                 toggle([(ngModel)]='profile.disableDynamicTitle')
 
             .mb-4
@@ -66,5 +66,5 @@
             ng-template(#placeholder)
 
 .modal-footer
-    button.btn.btn-primary((click)='save()') Save
-    button.btn.btn-danger((click)='cancel()') Cancel
+    button.btn.btn-primary((click)='save()') 保存
+    button.btn.btn-danger((click)='cancel()') 取消
