--- a/tabby-settings/src/components/setVaultPassphraseModal.component.pug
+++ b/tabby-settings/src/components/setVaultPassphraseModal.component.pug
@@ -1,13 +1,13 @@
-h3.modal-header.m-0.pb-0 Set master passphrase
+h3.modal-header.m-0.pb-0 设置主密码
 .modal-body
-    .mb-2 You can change it later, but it's unrecoverable if forgotten.
+    .mb-2 您可以在以后更改主密码，但忘记后不能恢复。
     .input-group
         input.form-control.form-control-lg(
             [type]='showPassphrase ? "text" : "password"',
             autofocus,
             [(ngModel)]='passphrase',
             #input,
-            placeholder='Master passphrase',
+            placeholder='输入主密码',
             (keyup.enter)='ok()',
             (keyup.esc)='cancel()',
         )
@@ -16,5 +16,5 @@ h3.modal-header.m-0.pb-0 Set master passphrase
                 i.fas.fa-eye
 
 .modal-footer
-    button.btn.btn-primary((click)='ok()') Set passphrase
-    button.btn.btn-danger((click)='cancel()') Cancel
+    button.btn.btn-primary((click)='ok()') 设置主密码
+    button.btn.btn-danger((click)='cancel()') 取消
