--- a/tabby-settings/src/components/settingsTab.component.pug
+++ b/tabby-settings/src/components/settingsTab.component.pug
@@ -3,7 +3,7 @@
         li(ngbNavItem='application')
             a(ngbNavLink)
                 i.fas.fa-fw.fa-window-maximize.mr-2
-                | Application
+                | 程序
             ng-template(ngbNavContent)
                 .content-box
                     .row
@@ -23,59 +23,65 @@
                                     i.fas.fa-sync(
                                         [class.fa-spin]='checkingForUpdate'
                                     )
-                                    span Check for updates
+                                    span 检查更新
 
                                 button.btn.btn-info.mt-3.mb-2(
                                     *ngIf='updateAvailable',
                                     (click)='updater.update()',
                                 )
                                     i.fas.fa-sync
-                                    span Update
+                                    span 更新
 
                         .col-12.col-md-6
                             .list-group.list-group-light.mb-5
                                 button.list-group-item.list-group-item-action.link-card((click)='homeBase.reportBug()')
                                     i.fas.fa-fw.fa-bug
                                     div
-                                        div Report a problem
-                                        small.text-muted Generate a pre-filled GitHub issue
+                                        div 报告问题
+                                        small.text-muted GitHub issue
 
                                 button.list-group-item.list-group-item-action.link-card((click)='homeBase.openDiscussions()')
                                     i.fas.fa-fw.fa-comments
                                     div
-                                        div Ask a question
-                                        small.text-muted On GitHub Discussions
+                                        div 提出问题
+                                        small.text-muted GitHub Discussions
 
                                 button.list-group-item.list-group-item-action.link-card((click)='homeBase.openGitHub()')
                                     i.fab.fa-fw.fa-github
                                     div
                                         div GitHub
-                                        small.text-muted Source code
+                                        small.text-muted 源码
+
+                                button.list-group-item.list-group-item-action.link-card((click)='homeBase.openTabbyCN()')
+                                    i.fab.fa-fw.fa-github
+                                    div
+                                        div Tabby 中文版
+                                        small.text-muted 了解与提出建议
 
                                 button.list-group-item.list-group-item-action.link-card((click)='showReleaseNotes()')
                                     i.fas.fa-fw.fa-book
                                     div
-                                        div What's new
-                                        small.text-muted Show release notes
+                                        div 更新日志
+                                        small.text-muted 显示发行说明
 
                                 button.list-group-item.list-group-item-action.link-card((click)='homeBase.openTwitter()')
                                     i.fab.fa-fw.fa-twitter
                                     div
-                                        div Subscribe to updates
-                                        small.text-muted Tabby news and updates on Twitter
+                                        div 订阅更新
+                                        small.text-muted Tabby 在 Twitter 上的新闻和更新
 
 
-                    h3 Application settings
+                    h3 程序设置
                     .form-line(*ngIf='platform.isShellIntegrationSupported()')
                         .header
-                            .title Shell integration
-                            .description Allows quickly opening a terminal in the selected folder
+                            .title Shell 集成
+                            .description 允许在选择的文件夹中快速打开一个终端
                         toggle([ngModel]='isShellIntegrationInstalled', (ngModelChange)='toggleShellIntegration()')
 
                     .form-line(*ngIf='hostApp.platform !== Platform.Web')
                         .header
-                            .title Enable analytics
-                            .description We're only tracking your Tabby and OS versions.
+                            .title 启用分析
+                            .description 我们只分析您的 Tabby 和操作系统版本
                         toggle(
                             [(ngModel)]='config.store.enableAnalytics',
                             (ngModelChange)='saveConfiguration(true)',
@@ -83,17 +89,17 @@
 
                     .form-line(*ngIf='hostApp.platform !== Platform.Web')
                         .header
-                            .title Automatic Updates
-                            .description Enable automatic installation of updates when they become available.
+                            .title 自动更新
+                            .description 当有更新的版本的时自动更新
                         toggle([(ngModel)]='config.store.enableAutomaticUpdates', (ngModelChange)='saveConfiguration()')
 
                     .form-line(*ngIf='hostApp.platform !== Platform.Web')
                         .header
-                            .title Debugging
+                            .title 调试
 
                         button.btn.btn-secondary((click)='hostWindow.openDevTools()')
                             i.fas.fa-bug
-                            span Open DevTools
+                            span 打开 DevTools
 
         ng-container(*ngFor='let provider of settingsProviders')
             li(*ngIf='provider.prioritized', [ngbNavItem]='provider.id')
@@ -116,17 +122,17 @@
         li(ngbNavItem='config-file')
             a(ngbNavLink)
                 i.fas.fa-fw.fa-code.mr-2
-                | Config file
+                | 配置文件
             ng-template.test(ngbNavContent)
                 .d-flex.flex-column.w-100.h-100
                     .h-100.d-flex
                         .w-100.d-flex.flex-column
-                            h3 Config file
+                            h3 配置文件
                             textarea.form-control.h-100(
                                 [(ngModel)]='configFile'
                             )
                         .w-100.d-flex.flex-column(*ngIf='showConfigDefaults')
-                            h3 Defaults
+                            h3 默认
                             textarea.form-control.h-100(
                                 [(ngModel)]='configDefaults',
                                 readonly
@@ -134,20 +140,20 @@
                     .mt-3.d-flex
                         button.btn.btn-primary((click)='saveConfigFile()', *ngIf='isConfigFileValid()')
                             i.fas.fa-check.mr-2
-                            | Save and apply
+                            | 保存和应用
                         button.btn.btn-primary(disabled, *ngIf='!isConfigFileValid()')
                             i.fas.fa-exclamation-triangle.mr-2
-                            | Invalid syntax
+                            | 无效语法
                         button.btn.btn-secondary.ml-auto(
                             (click)='showConfigDefaults = !showConfigDefaults'
-                        ) Show defaults
+                        ) 显示默认
                         button.btn.btn-secondary.ml-3(
                             *ngIf='platform.getConfigPath()',
                             (click)='showConfigFile()'
                         )
                             i.fas.fa-external-link-square-alt.mr-2
-                            | Show config file
+                            | 显示配置文件
 
     div([ngbNavOutlet]='nav')
 
-button.btn.btn-warning.btn-block(*ngIf='config.restartRequested', '(click)'='restartApp()') Restart the app to apply changes
+button.btn.btn-warning.btn-block(*ngIf='config.restartRequested', '(click)'='restartApp()') 重启程序以应用更改
