--- a/tabby-ssh/src/components/sftpDeleteModal.component.pug
+++ b/tabby-ssh/src/components/sftpDeleteModal.component.pug
@@ -1,6 +1,6 @@
 .modal-body
-    label Deleting
+    label 删除中
     .no-wrap {{progressMessage}}
 
 .modal-footer
-    button.btn.btn-danger((click)='cancel()') Cancel
+    button.btn.btn-danger((click)='cancel()') 取消
