--- a/tabby-ssh/src/components/sftpPanel.component.pug
+++ b/tabby-ssh/src/components/sftpPanel.component.pug
@@ -8,21 +8,21 @@
 
     button.btn.btn-link.btn-sm.d-flex((click)='upload()')
         i.fas.fa-upload.mr-1
-        div Upload
+        div 上传
 
     button.btn.btn-link.btn-close((click)='close()') !{require('../../../tabby-core/src/icons/times.svg')}
 
 .body(dropZone, (transfer)='uploadOne($event)')
-    div(*ngIf='!sftp') Connecting
+    div(*ngIf='!sftp') 连接中
     div(*ngIf='sftp')
-        div(*ngIf='fileList === null') Loading
+        div(*ngIf='fileList === null') 加载中
         .list-group.list-group-light(*ngIf='fileList !== null')
             .list-group-item.list-group-item-action.d-flex.align-items-center(
                 *ngIf='path !== "/"',
                 (click)='goUp()'
             )
                 i.fas.fa-fw.fa-level-up-alt
-                div Go up
+                div 增加
             .list-group-item.list-group-item-action.d-flex.align-items-center(
                 *ngFor='let item of fileList',
                 (contextmenu)='showContextMenu(item, $event)',
