--- a/tabby-ssh/src/components/sshSettingsTab.component.pug
+++ b/tabby-ssh/src/components/sshSettingsTab.component.pug
@@ -2,7 +2,7 @@ h3 SSH
 
 .form-line
     .header
-        .title Warn when closing active connections
+        .title 关闭活动的连接时警告
     toggle(
         [(ngModel)]='config.store.ssh.warnOnClose',
         (ngModelChange)='config.save()',
@@ -10,8 +10,8 @@ h3 SSH
 
 .form-line(*ngIf='hostApp.platform === Platform.Windows')
     .header
-        .title WinSCP path
-        .description When WinSCP is detected, you can launch an SCP session from the context menu.
+        .title WinSCP 路径
+        .description 当检测到 WinSCP 时您可以从菜单中启动一个 SCP 会话
     input.form-control(
         type='text',
         placeholder='Auto-detect',
@@ -21,19 +21,19 @@ h3 SSH
 
 .form-line(*ngIf='hostApp.platform === Platform.Windows')
     .header
-        .title Agent type
-        .description Forces a specific SSH agent connection type.
+        .title Agent 类型
+        .description 强制指定 SSH 代理连接类型
     select.form-control(
         [(ngModel)]='config.store.ssh.agentType',
         (ngModelChange)='config.save()',
     )
-        option(value='auto') Automatic
+        option(value='auto') 自动
         option(value='pageant') Pageant
         option(value='pipe') Named pipe
 
 .form-line(*ngIf='config.store.ssh.agentType === "pipe"')
     .header
-        .title Agent pipe path
+        .title Agent pipe 路径
         .description Sets the SSH agent's named pipe path.
     input.form-control(
         type='text',
