--- a/tabby-terminal/src/components/colorSchemeSettingsTab.component.pug
+++ b/tabby-terminal/src/components/colorSchemeSettingsTab.component.pug
@@ -1,5 +1,5 @@
 .head
-    h3.mb-3 Current color scheme
+    h3.mb-3 当前配色方案
 
     .d-flex.align-items-center(*ngIf='!editing')
         span {{getCurrentSchemeName()}}
@@ -7,18 +7,18 @@
         .btn-toolbar
             button.btn.btn-secondary((click)='editScheme()')
                 i.fas.fa-pen
-                span Edit
+                span 编辑
             .mr-1
             button.btn.btn-danger(
                 (click)='deleteScheme(config.store.terminal.colorScheme)',
                 *ngIf='currentCustomScheme'
             )
                 i.fas.fa-trash
-                span Delete
+                span 删除
 
     div(*ngIf='editing')
         .form-group
-            label Name
+            label 名字
             input.form-control(type='text', [(ngModel)]='config.store.terminal.colorScheme.name')
 
         .form-group
@@ -60,11 +60,11 @@
         .mr-auto
         button.btn.btn-primary((click)='saveScheme()')
             i.fas.fa-check
-            span Save
+            span 保存
         .mr-1
         button.btn.btn-secondary((click)='cancelEditing()')
             i.fas.fa-times
-            span Cancel
+            span 取消
 
     hr.mt-3.mb-4
 
@@ -89,7 +89,7 @@
 
                     .mr-auto
                         span {{scheme.name}}
-                        .badge.badge-info.ml-2(*ngIf='customColorSchemes.includes(scheme)') Custom
+                        .badge.badge-info.ml-2(*ngIf='customColorSchemes.includes(scheme)') 自定义
 
                     div
                         .d-flex
